@@ -67,7 +67,7 @@ public class LocalCryptoAutoConfiguration {
                 log.info("localTextCipher init.");
             };
             // 预热：异步初始化本地存储加解密相关 bean
-            Threads.execute("localCryptoPreInit", preInitLocalCrypto);
+            Threads.execute("localCryptoInit", preInitLocalCrypto);
         };
     }
 
