@@ -60,16 +60,16 @@
         <xstream.version>1.4.21</xstream.version>
 
         <!-- apache-common-tools -->
-        <commons-beanutils.version>1.9.3</commons-beanutils.version>
-        <commons-codec.version>1.17.2</commons-codec.version>
-        <commons-collections4.version>4.4</commons-collections4.version>
-        <commons-exec.version>1.3</commons-exec.version>
-        <commons-email.version>1.5</commons-email.version>
-        <commons-io.version>2.18.0</commons-io.version>
-        <commons-lang3.version>3.17.0</commons-lang3.version>
-        <commons-net.version>3.6</commons-net.version>
-        <commons-configuration.version>1.10</commons-configuration.version>
-        <commons-daemon.version>1.4.0</commons-daemon.version>
+        <commons-beanutils.version>1.11.0</commons-beanutils.version>
+        <commons-codec.version>1.19.0</commons-codec.version>
+        <commons-collections4.version>4.5.0</commons-collections4.version>
+        <commons-exec.version>1.5.0</commons-exec.version>
+        <commons-email.version>1.6.0</commons-email.version>
+        <commons-io.version>2.20.0</commons-io.version>
+        <commons-lang3.version>3.18.0</commons-lang3.version>
+        <commons-net.version>3.12.0</commons-net.version>
+        <commons-configuration2.version>2.120</commons-configuration2.version>
+        <commons-daemon.version>1.4.1</commons-daemon.version>
 
         <!-- java native access -->
         <jna.version>5.17.0</jna.version>
@@ -95,7 +95,6 @@
         <tika-core.version>2.9.4</tika-core.version>
         <opencsv.version>5.9</opencsv.version>
 
-        <!-- JDK21 注意该版本： https://github.com/projectlombok/lombok/issues/3393-->
         <lombok.version>1.18.38</lombok.version>
 
         <!-- dataBase-->
@@ -111,7 +110,7 @@
         <pagehelper-starter.version>2.1.0</pagehelper-starter.version>
         <beecp.version>4.0.6</beecp.version>
         <p6spy.version>3.9.1</p6spy.version>
-        <redisson.version>3.45.1</redisson.version>
+        <redisson.version>3.50.0</redisson.version>
 
         <!-- test -->
         <mockito-all.version>1.10.19</mockito-all.version>
@@ -481,8 +480,8 @@
             </dependency>
             <dependency>
                 <groupId>commons-configuration</groupId>
-                <artifactId>commons-configuration</artifactId>
-                <version>${commons-configuration.version}</version>
+                <artifactId>commons-configuration2</artifactId>
+                <version>${commons-configuration2.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
